--- a/Task3/Task3. 第八章 数据规整：聚合、合并和重塑.ipynb
+++ b/Task3/Task3. 第八章 数据规整：聚合、合并和重塑.ipynb
@@ -1,11 +1,286 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8.1 层次化索引"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a  1    0.556783\n",
+       "   2    0.975217\n",
+       "   3   -1.790046\n",
+       "b  1   -0.208164\n",
+       "   3   -1.116316\n",
+       "c  1   -2.894037\n",
+       "   2   -0.717087\n",
+       "d  2    0.963548\n",
+       "   3    1.392976\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.Series(np.random.randn(9),\n",
+    "                  index=[['a', 'a', 'a', 'b', 'b', 'c', 'c', 'd', 'd'],\n",
+    "                         [1, 2, 3, 1, 3, 1, 2, 2, 3]])\n",
+    "\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultiIndex(levels=[['a', 'b', 'c', 'd'], [1, 2, 3]],\n",
+       "           labels=[[0, 0, 0, 1, 1, 2, 2, 3, 3], [0, 1, 2, 0, 2, 0, 1, 1, 2]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1   -0.208164\n",
+       "3   -1.116316\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['b']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b  1   -0.208164\n",
+       "   3   -1.116316\n",
+       "c  1   -2.894037\n",
+       "   2   -0.717087\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['b':'c']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b  1   -0.208164\n",
+       "   3   -1.116316\n",
+       "d  2    0.963548\n",
+       "   3    1.392976\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[['b', 'd']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    0.975217\n",
+       "c   -0.717087\n",
+       "d    0.963548\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[:, 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>0.556783</td>\n",
+       "      <td>0.975217</td>\n",
+       "      <td>-1.790046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>-0.208164</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.116316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>-2.894037</td>\n",
+       "      <td>-0.717087</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.963548</td>\n",
+       "      <td>1.392976</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          1         2         3\n",
+       "a  0.556783  0.975217 -1.790046\n",
+       "b -0.208164       NaN -1.116316\n",
+       "c -2.894037 -0.717087       NaN\n",
+       "d       NaN  0.963548  1.392976"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.unstack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a  1    0.556783\n",
+       "   2    0.975217\n",
+       "   3   -1.790046\n",
+       "b  1   -0.208164\n",
+       "   3   -1.116316\n",
+       "c  1   -2.894037\n",
+       "   2   -0.717087\n",
+       "d  2    0.963548\n",
+       "   3    1.392976\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.unstack().stack()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "frame = pd.DataFrame(np.arange(12).reshape((4, 3)),\n",
+    "                     index=[['a', 'a', 'b', 'b'], [1, 2, 1, 2]],\n",
+    "                     columns=[['Ohio', 'Ohio', 'Colorado'],\n",
+    "                              ['Green', 'Red', 'Green']])"
+   ]
   }
  ],
  "metadata": {
